syntax = "proto3";

package bank;

option go_package = "github.com/cannondaleSL4/bank-person-store/common/proto";

service BankService {
  rpc IncreaseBalance(IncreaseBalanceRequest) returns (BalanceResponse);
  rpc DecreaseBalance(DecreaseBalanceRequest) returns (BalanceResponse);
}

message IncreaseBalanceRequest {
  int64 client_id = 1;
  double amount = 2;
}

message DecreaseBalanceRequest {
  int64 client_id = 1;
  double amount = 2;
}

message BalanceResponse {
  string message = 1;
}
